# sail

./: .gitignore  CMakeLists.txt  README.md  TC-mingw.cmake
CMAKE/: CMakeLists.txt  SailConfig.h.in  TC-mingw.cmake
Source/: Graphics.cpp  Graphics.h  Sail.cpp  Sail.cxx
src/: Globals.h  Graphics.cpp  Graphics.h  Sail.cpp
